--- a/base.css
+++ b/base.css
@@ -1,3 +1,7 @@
+#main {
+    background: rgb(245,245,245);
+}
+
 canvas#color-bar {
     background-image: -moz-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: -webkit-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
