--- a/css/base.css
+++ b/css/base.css
@@ -17,7 +17,13 @@ canvas#color-bar {
     background-image: -o-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
 
-    padding-top: 10px;
     text-align: center;
     color: rgb(200,200,200);
+
+}
+#footer-container {
+    padding-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
 }
