--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,7 @@
 }
 
 canvas#color-bar {
+    background: rgb(130,130,130);
     background-image: -moz-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: -webkit-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: -ms-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
@@ -28,6 +29,7 @@ canvas#color-bar {
 }
 
 #footer {
+    background: rgb(30, 30, 30);
     background-image: -moz-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: -webkit-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: -ms-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
