--- a/css/base.css
+++ b/css/base.css
@@ -1,14 +1,26 @@
 #main {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
     background: rgb(245,245,245);
 }
 
 canvas#color-bar {
+    width: 100%;
+    height: 10%;
+
     background: rgb(130,130,130);
     background-image: -moz-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: -webkit-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: -ms-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: -o-linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
     background-image: linear-gradient(top, rgb(140,140,140), rgb(120,120,120));
+}
+
+#canvas {
+    width: 100%;
+    height: 100%;
 }
 
 #brush-icon {
