--- a/css/base.css
+++ b/css/base.css
@@ -42,14 +42,34 @@ canvas#color-bar {
     margin-top: 25px;
 }
 
-#brush-icon {
-    position: absolute;
-    margin-right: -12px;
+#brush-picker {
+    margin-top: 25px;
+    background: gray;
+    box-shadow: 0px 0px 40px rgb(0, 0, 0);
+    border-radius: 15px 15px 15px 15px;
 }
+.brush-thumb {
+    position: absolute;
+    background: rgb(240, 240, 240);
+    width: 64px;
+    height: 64px;
+    margin: 12px;
+    border-radius: 5px 5px 5px 5px;
+}
+.brush-thumb:hover {
+    background: white;
+    cursor: pointer;
+}
+.brush-thumb p {
+    font-size: .75em;
+    line-height: 64px;
+    text-align: center;
+}
+
 #brush-smaller {
     position: absolute;
     margin-right: -12px;
-    margin-left: 24px;
+    margin-left: 12px;
     color: red;
 }
 #brush-larger {
