--- a/css/base.css
+++ b/css/base.css
@@ -72,6 +72,9 @@ canvas#color-bar {
     box-shadow: 0px 0px 40px rgb(0, 0, 0);
     border-radius: 15px 15px 15px 15px;
 }
+.brush-option {
+    margin-top: 1em;
+}
 .option-header {
     position: relative;
     font-size: .75em;
