--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,22 @@ body {
     background: white;
 }
 
+#menu {
+    position: absolute;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 95%;
+    background: rgba(60,60,60,.9);
+    box-shadow: 0px 0px 15px rgb(0, 0, 0);
+    border-radius: 15px 15px 15px 15px;
+    z-index: 1000;
+}
+.menu-item {
+    visibility: hidden;
+}
+
 #left-panel {
     position: absolute;
     top: 0;
@@ -23,7 +39,10 @@ body {
     background-image: linear-gradient(top, rgb(110,110,110), rgb(145,145,145));
 }
 
-.color-picker {
+#color-picker-menu {
+    margin-top: 50px;
+}
+#color-picker {
     margin-top: 25px;
 }
 
