--- a/css/base.css
+++ b/css/base.css
@@ -32,6 +32,11 @@ body {
 #menu hr {
     color: black;
 }
+.menu-item h3 {
+    color: white;
+    text-align: center;
+    margin-top: 1em;
+}
 
 #left-panel {
     visibility: hidden;
@@ -55,11 +60,7 @@ body {
     margin-top: 1em;
 }
 
-#brush-picker-menu {
-    margin-top: 25px;
-    background: gray;
-    box-shadow: 0px 0px 15px rgb(0, 0, 0);
-    border-radius: 15px 15px 15px 15px;
+#brush-picker-menu  {
 }
 #brush-picker {
     margin-top: 25px;
@@ -110,15 +111,6 @@ body {
 .brush-option-menu {
     padding-top: 1em;
     padding-bottom: 2em;
-
-    background-image: -moz-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
-    background-image: -webkit-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
-    background-image: -ms-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
-    background-image: -o-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
-    background-image: linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
-}
-.brush-option-menu:first-child {
-    border-radius: 15px 15px 0 0;
 }
 .option-header, .option-header-menu {
     position: relative;
