js to css logic

--- a/css/sticky_footer.css
+++ b/css/sticky_footer.css
@@ -1,22 +1,8 @@
-* {
-	margin: 0;
-}
-html, body {
-	height: 100%;
-}
-#wrap {
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -50px; /* the bottom margin is the negative value of the footer's height */
-}
 #footer {
-	height: 50px; /* .push must be the same height as .footer */
+    width: 100%;
+	height: 5%;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
-
-/*
-
-Sticky Footer by Ryan Fait
-http://ryanfait.com/
-
-*/
