--- a/css/base.css
+++ b/css/base.css
@@ -1,35 +1,27 @@
+* {
+	margin: 0;
+}
+html, body, #main {
+	min-height: 100%;
+	height: 100%;
+}
 body {
     background: rgb(190,190,190);
     overflow: hidden;
     visibility: hidden;
 }
 
-#mobile-header {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 25px;
-    width: 100%;
-    padding-top: 5px;
-    font-weight: bold;
-
-    background: rgb(30, 30, 30);
-    background-image: -moz-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
-    background-image: -webkit-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
-    background-image: -ms-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
-    background-image: -o-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
-    background-image: linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
-
-    text-align: center;
-    color: rgb(200,200,200);
-
-    display: none;
-}
-
 #canvas-wrap {
+    height: 100%;
     overflow: auto;
 }
+
 #canvas {
+    width: 75%;
+    height: 90%;
+
+    margin-left: 225px;
+
     background: white;
 }
 
@@ -62,11 +54,12 @@ body {
 }
 
 #left-panel {
-    visibility: hidden;
+    height: 95%;
+    width: 225px;
+
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
 
     background: rgb(30, 30, 30);
     background-image: -moz-linear-gradient(top, rgb(50,50,50), rgb(80,80,80));
@@ -78,24 +71,27 @@ body {
 
 #colorwheel {
     margin-top: 1em;
+    margin-left: 12.5px;
 }
 #colorwheel-menu {
     margin-top: 1em;
 }
 
-#brush-picker-menu  {
-}
 #brush-picker {
-    margin-top: 25px;
-    box-shadow: 0px 0px 15px rgb(0, 0, 0);
-    border-radius: 15px 15px 15px 15px;
+    width: 80%;
+    height: 33%;
+
     float: left;
+    margin-top: 1em;
+    margin-left: 10%;
 
     background-image: -moz-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: -webkit-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: -ms-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: -o-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
+    box-shadow: 0px 0px 15px rgb(0, 0, 0);
+    border-radius: 15px 15px 15px 15px;
 }
 .brush-thumb {
     position: absolute;
@@ -116,17 +112,21 @@ body {
 }
 
 #brush-options {
-    margin-top: 1em;
-    box-shadow: 0px 0px 15px rgb(0, 0, 0);
-    border-radius: 15px 15px 15px 15px;
-    float: left;
-    color: white;
+    width: 80%;
+    height: 30%;
 
+    float: left;
+    margin-top: 1em;
+    margin-left: 10%;
+
+    color: white;
     background-image: -moz-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: -webkit-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: -ms-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: -o-linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
     background-image: linear-gradient(top, rgba(90,90,90,.8), rgba(25,25,25,.8));
+    box-shadow: 0px 0px 15px rgb(0, 0, 0);
+    border-radius: 15px 15px 15px 15px;
 }
 .brush-option {
     margin-top: 1em;
