--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -23,10 +23,14 @@
         height: 95%;
         width: 100%;
 
-        margin-left: 0%;
+        margin-left: 0;
     }
 
     #left-panel {
         display: none;
+    }
+
+    #menu {
+        top: 4%;
     }
 }
