--- a/css/base.css
+++ b/css/base.css
@@ -26,12 +26,14 @@ body {
 }
 
 #menu {
+    width: 90%;
+    height: 90%;
+
     position: absolute;
+    top: 2%;
+    left: 5%;
+    z-index: 1000;
     visibility: hidden;
-    top: 0;
-    left: 0;
-    width: 99%;
-    height: 99%;
 
     background: rgb(40, 40, 40);
     background-image: -moz-linear-gradient(top, rgba(5,5,5,.8), rgba(70,70,70,.8));
@@ -39,10 +41,8 @@ body {
     background-image: -ms-linear-gradient(top, rgba(5,5,5,.8), rgba(70,70,70,.8));
     background-image: -o-linear-gradient(top, rgba(5,5,5,.8), rgba(70,70,70,.8));
     background-image: linear-gradient(top, rgba(5,5,5,.8), rgba(70,70,70,.8));
-
     box-shadow: 0px 0px 15px rgb(0, 0, 0);
     border-radius: 15px 15px 15px 15px;
-    z-index: 1000;
 }
 #menu hr {
     color: black;
@@ -74,7 +74,10 @@ body {
     margin-left: 12.5px;
 }
 #colorwheel-menu {
+    position: fixed;
+    left: 50%;
     margin-top: 1em;
+    margin-left: -100px;
 }
 
 #brush-picker {
@@ -172,15 +175,22 @@ body {
 }
 
 #footer {
+    width: 100%;
+	height: 5%;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    text-align: center;
+
+    color: rgb(200,200,200);
     background: rgb(30, 30, 30);
     background-image: -moz-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: -webkit-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: -ms-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: -o-linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
     background-image: linear-gradient(top, rgb(45,45,45), rgb(20,20,20));
-
-    text-align: center;
-    color: rgb(200,200,200);
 }
 #footer-container {
     position: relative;
