--- a/css/globals.scss
+++ b/css/globals.scss
@@ -1,5 +1,6 @@
 $black: rgb(10, 10, 10);
 $dark-gray: rgb(45, 45, 45);
+$gray: rgb(75, 75, 75);
 $medium-gray: rgb(120, 120, 120);
 $light-gray: rgb(200,200,200);
 $white: rgb(240, 240, 240);
