--- a/css/base.css
+++ b/css/base.css
@@ -35,7 +35,7 @@ body {
   background-image: linear-gradient(top, #2d2d2d, #202020);
   background: #2d2d2d;
   box-shadow: 0px 0px 3 #0a0a0a;
-  border-radius: 15px;
+  border-radius: 3px;
   height: 99%;
   left: 0;
   position: absolute;
@@ -57,7 +57,7 @@ body {
   background-image: -ms-linear-gradient(top, #2d2d2d, #202020);
   background-image: -o-linear-gradient(top, #2d2d2d, #202020);
   background-image: linear-gradient(top, #2d2d2d, #202020);
-  background: #2d2d2d;
+  background: #4b4b4b;
   height: 100%;
   left: 0;
   position: absolute;
@@ -82,7 +82,7 @@ body {
 
 .brush-thumb {
   background: #f0f0f0;
-  border-radius: 5;
+  border-radius: 3px;
   height: 64px;
   margin: 12px;
   position: absolute;
