--- a/css/base.scss
+++ b/css/base.scss
@@ -32,7 +32,7 @@ body {
     @include gradient($dark-gray, darken($dark-gray, 5%));
     background: $dark-gray;
     box-shadow: 0px 0px 3 $black;
-    border-radius: 15px;
+    border-radius: 3px;
     height: 99%;
     left: 0;
     position: absolute;
@@ -52,7 +52,7 @@ body {
 
 #left-panel {
     @include gradient($dark-gray, darken($dark-gray, 5%));
-    background: $dark-gray;
+    background: $gray;
     height: 100%;
     left: 0;
     position: absolute;
@@ -77,7 +77,7 @@ body {
 
 .brush-thumb {
     background: $white;
-    border-radius: 5;
+    border-radius: 3px;
     height: 64px;
     margin: 12px;
     position: absolute;
